--- a/src/evol_quant_levels_matrix/config.yaml
+++ b/src/evol_quant_levels_matrix/config.yaml
@@ -1,4 +1,8 @@
-# config.yaml
+# -*- coding: utf-8 -*-
+# @Time    : 2023/10/21 11:02 CST
+# @Author  : Guangchen Jiang
+# @Email   : guangchen98.jiang@gmail.com
+# @File    : src/evol_quant_levels_matrix/config.yaml
 
 judgment threshold: 5
 total round: 2000000
