perf(*): ignore some files or dics specific to this project
Added some statement about files and folders specific to this project that need to be ignored by git to `.gitignore`.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# project specify ignore files or directories
+res/
+src/evol_quant_levels_matrix/res/
+src/recovery/res/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -5,9 +10,6 @@ __pycache__/
 
 # C extensions
 *.so
-
-# Run results
-res/
 
 # Distribution / packaging
 .Python
