fix(*): fix the bug about cooperate matrix and timing. perf(*): change some data type to accelerate this program.
Fix the bug about calculate the mean of cooperate matrix (in `src/evol_quant_levels_matrix/com_p_matrix.py`).
Fix the bug about timing.
Change the data type about int from `np.int32` to `int` which can accelerate the program.

--- a/src/evol_quant_levels_matrix/config.yaml
+++ b/src/evol_quant_levels_matrix/config.yaml
@@ -8,8 +8,8 @@ judgment threshold: 5
 total round: 2000000
 burn in time: 500000
 population size: 50
-error rate: .05
-observation probability: .9
+error rate: 0.05
+observation probability: 0.9
 score threshold: 0
 selection strength: 1.
 reward matrix:
