--- a/configs/evol_config.yaml
+++ b/configs/evol_config.yaml
@@ -2,7 +2,7 @@
 # @Time    : 2023/10/21 11:02 CST
 # @Author  : Guangchen Jiang
 # @Email   : guangchen98.jiang@gmail.com
-# @File    : src/evol_quant_levels_matrix/config.yaml
+# @File    : configs/evol_config.yaml
 
 judgment threshold: 5
 total round: 2000000
