--- a/configs/recovery_config.yaml
+++ b/configs/recovery_config.yaml
@@ -2,7 +2,7 @@
 # @Time    : 2023/10/21 11:02 CST
 # @Author  : Guangchen Jiang
 # @Email   : guangchen98.jiang@gmail.com
-# @File    : src/recovery/config.yaml
+# @File    : configs/recovery_config.yaml
 
 total round: 1000
 population size: 50
